delete the message button

--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -3840,10 +3840,10 @@
                                             חדש
                                         </button>
 
-                                        <button onclick="MessageToPalestinianCoor()" class="btn btn-success waves-effect w-md waves-light m-b-5">
+                                        <!--<button onclick="MessageToPalestinianCoor()" class="btn btn-success waves-effect w-md waves-light m-b-5">
                                             <span class="glyphicon glyphicon-copy m-r-5"></span>
                                                     הודעה למתאמות
-                                        </button>
+                                        </button>-->
 
                                     </div>
                                 </div>
