--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -2518,10 +2518,22 @@
 
                         //#region adjust driver column
                         driverHTML = '';
+                        let driversArr = [];
+                        if (arr_rides[i].DriverName != '') {
+                            //Custom obj for buildDriverHTML and buildAcionsButtonsHTML functions.
+                            let MainDriver = {
+                                Id: arr_rides[i].MainDriver,
+                                DisplayName: arr_rides[i].DriverName,
+                                EnglishFN: '',
+                                EnglishLN: '',
+                                CellPhone: arr_rides[i].DriverCellPhone,
+                                NoOfDocumentedRides: arr_rides[i].NoOfDocumentedRides,
+                                IsNewDriver: arr_rides[i].IsNewDriver
 
-                        if (arr_rides[i].DriverName !='') {
-
-                            driverHTML = buildDriverHTML(arr_rides[i].RidePatNum, arr_rides[i].Drivers[0], arr_rides[i].RideNum);
+                            }
+                            driversArr.push(MainDriver);
+                            let RideNum = 1;
+                            driverHTML = buildDriverHTML(arr_rides[i].RidePatNum, MainDriver, RideNum);
                         } else {
 
                             driverHTML = buildDriverHTML(arr_rides[i].RidePatNum);
@@ -2529,7 +2541,17 @@
                         //#endregion adjust driver column
 
                         //#region Status
-                        status2render = buildStatusString(arr_rides[i].Pat.RidePatPatientStatus, arr_rides[i].RidePatNum);
+                        //custom for buildstatusString function
+                        let statusObj = {}
+                        if (arr_rides[i].PatientStatus == '') {
+                            statusObj.Status = -1;
+                        }
+                        else {
+                            statusObj.Status = 1;
+
+                        }
+                        statusObj.EditTimeStamp = arr_rides[i].PatientStatusEditTime;
+                        status2render = buildStatusString(statusObj, arr_rides[i].RidePatNum);
                         //#endregion Status
 
                         //#region remarkHTML
@@ -2537,16 +2559,22 @@
                         //#endregion remarkHTML
 
                         //#region patient age
-                        patientAge = buildPatientAgeHTML(arr_rides[i].Pat);
+
+                        //custom object for buildPatientAgeHTML function.
+                        let ageObj = {}
+                        ageObj.Age = arr_rides[i].PatientAge;
+                        ageObj.GenderAsEnum = arr_rides[i].PatientGender
+                        patientAge = buildPatientAgeHTML(ageObj);
                         //#endregion
 
 
                         //#region buttons
-                        btnStr = buildAcionsButtonsHTML(arr_rides[i].RidePatNum, arr_rides[i].Drivers)
+
+                        btnStr = buildAcionsButtonsHTML(arr_rides[i].RidePatNum, driversArr);
                         //#endregion buttons
 
                         //#region isPatientStatusShouldPaintRow
-                        isPatientStatusShouldPaintRow = callIfPatientStatusShouldPaintRow(arr_rides[i]);
+                        isPatientStatusShouldPaintRow = callIfPatientStatusShouldPaintRow_AfterUnited(arr_rides[i]);
                         //#endregion isPatientStatusShouldPaintRow
 
                         thisRidePat = {
@@ -2560,8 +2588,8 @@
                             status: status2render,
                             lastModified: convertDBDate2FrontEndDate(arr_rides[i].LastModified).toLocaleString('he-IL', { dateStyle: "short", timeStyle: "short" }),
                             remark: remarkHTML,
-                            isAnonymous: arr_rides[i].Pat.IsAnonymous === 'True',
-                            hasDriver: arr_rides[i].Drivers.length > 0,
+                            isAnonymous: arr_rides[i].IsAnonymous == true,
+                            hasDriver: arr_rides[i].MainDriver != -1,
                             buttons: btnStr,
                             isPatientStatusShouldPaintRow: isPatientStatusShouldPaintRow,
                         }
@@ -3894,6 +3922,34 @@
                 }
             })
         }
+
+        const callIfPatientStatusShouldPaintRow_AfterUnited = (ride) => {
+
+            let result = false;
+            //const status = ride.Pat.RidePatPatientStatus.Status;
+            const status = ride.PatientStatus == 'Finished' ? 1 : -1;
+            treatmentFinished = status === patientStatus.Finished;
+
+            //const driverIsAssigned = ride.Drivers.length > 0;
+            const driverIsAssigned = ride.MainDriver != -1;
+
+            const thisRidePatDate = convertDBDate2FrontEndDate(ride.PickupTime);
+            let isAfterNoonRide = false;
+
+            if (typeof thisRidePatDate !== undefined) {
+
+                if (isDate(thisRidePatDate)) {
+                    isAfterNoonRide = thisRidePatDate.getMinutes() === afternoonIndicator;
+                }
+            }
+
+            if (treatmentFinished && ((!driverIsAssigned) || (driverIsAssigned && isAfterNoonRide))) {
+
+                result = true;
+            }
+
+            return result;
+        }
         
         const callIfPatientStatusShouldPaintRow = (ride) => {
 
@@ -4114,7 +4170,7 @@
                     ? numOfPassengers_English
                     : numOfPassengers;
                 equipmentsAndnumOfPassengers += `<div>`;
-                ridepat.Pat.Equipment.map((eq) => {
+                ridepat.PatientEquipments.map((eq) => {
                     equipmentsAndnumOfPassengers += `<img class="equipments-img" src="../../Media/${eq}.png" />`;
                 });
                 equipmentsAndnumOfPassengers += `</div>`;
@@ -4137,7 +4193,7 @@
                 patient_English_Name2render = "<span class='boldFont'>patient</span>";
             } else {
                 patientName2render = `<a href="patientform.html" data-obj="patient" class='showMe blueFont clickable boldFont' id='${ridepat.PatientId}'>${ridepat.PatientName}</a>`;
-                patient_English_Name2render = `<a href="patientform.html" data-obj="patient" class='showMe blueFont clickable boldFont' id='${ridepat.Pat.Id}'>${ridepat.Pat.EnglishName}</a>`;
+                patient_English_Name2render = `<a href="patientform.html" data-obj="patient" class='showMe blueFont clickable boldFont' id='${ridepat.PatientId}'>${ridepat.PatientName}</a>`;
             }
 
 
